--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Presidential Graphs</title>
     <script src="./frontend/bundle.js"></script>
+    <link rel="stylesheet" href="./assets/style.css"></link>
   </head>
   <body>
     <main id="root"></main>
