changed script tag in html page?

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Presidential Graphs</title>
-    <script src="./frontend/bundle.js"></script>
+    <script type="text/javascript" src="./frontend/bundle.js"></script>
     <link rel="stylesheet" href="./assets/style.css"></link>
   </head>
   <body>
