--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css"></link>
   </head>
   <body>
+    <div class="heckyeah">HECK YEAH!</div>    
     <main id="root"></main>
   </body>
 </html>
