trying to get the linkedin scraper to pick up shortcut image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Presidential Graphs</title>
+    <link rel="shortcut icon" href="./assets/images/elections.png" />
+    <link rel="image_src" href="./assets/images/elections.png" />    
     <script type="text/javascript" src="./frontend/bundle.js"></script>
     <link rel="stylesheet" href="./assets/style.css"></link>
   </head>
